Update 2015-06-16-WebLogic-11g-setup-for-eclipse.md